resources/public/css/bass.css
.hidden {
    display: none;
}


/***********************
    Instrument layout
 ***********************/

div#instrument.classic .instrument-elements{
    font-size: 11.2px;
    font-family: Verdana, Geneva, Arial, Helvetica, sans-serif;
}

div#instrument .order-count {
    width: 100%;
    text-align: center;
}

div#instrument .instrument-show-name {
    width: 100%;
    text-align: center;
}

/*

This style is defined below - seems redundant

div#instrument .col .option.line{
    display: block;
    padding: 5px 2px 5px 2px;
}
*/

div#instrument.desktop > div{
    width: 700px;
}

div#instrument.responsive.desktop .col.cell .option-label{
    display: none;
}

/*
div#instrument.desktop .col{
    display: inline-block;
    padding: 5px 0px 5px 0px;
}
*/


div#instrument .col{
    display: inline-block;
    vertical-align: top;
    padding: 5px 0 5px 0;
}

div#instrument.responsive.desktop .mobile-only{
    display: none;
}

div#instrument.responsive.mobile .desktop-only{
    display: none;
}


div#instrument.responsive.mobile .item-div{
    width: 100%;
    margin-top: 10px;
}

div#instrument.responsive.mobile .col.cell, div#instrument .option.line{
    display: block;
    padding: 5px 2px 5px 2px;
}

div#instrument .content{
    padding-left: 2px;
    padding-right: 2px;
}

/*
div#instrument div.navigate{
    width: 100%;
}
*/

div#instrument div.navigator div{
    display: inline-block;
}

div#instrument.desktop div.navigator div{
    width: 50%;
}

div#instrument.desktop div.navigator div.right{
    text-align: right;
}

div#instrument div.navigator div.left button{
    margin-right: 10px;
}

div#instrument div.navigator button{
    margin-top: 10px;
    margin-bottom: 10px;
}

/*
div#instrument.mobile .col.cell .option.cell{
    display: block;
}

div#instrument.mobile .col.content{
    display: inline;
    vertical-align: top;
    padding: 5px 2px 5px 2px;
}

div#instrument.mobile .col.cell .option-label{
    display: initial;
}
*/


/***********************
        Slider
 ***********************/

div#instrument .slider{
    display: inline-block;
    text-align: center;
    width: 410px;
}

.ui-slider-horizontal {
    height: 12px;
    width: 400px;
}

.ui-slider .ui-slider-handle {
    height: 16px;
    width: 16px;
}

div#instrument .slider-label-left {
    text-align: right;
    padding-right: 5px;
    display: inline-block;
    width: 100px;
}

div#instrument .slider-label-right {
    text-align: left;
    padding-left: 5px;
    display: inline-block;
    width: 100px;
}

div#instrument .slider-container {
    margin-top: 5px;
    margin-bottom: 5px;
    vertical-align: middle;
}

/***********************
    Interactive colors
 ***********************/

div#instrument .has-option:hover{
    background-color: #DDDDDD;
}

div#instrument .item-div.has-data{
    #background-color: #EEEEEE;
    background-color: greenyellow;
}

div#instrument .item-div.jumped-over {
    background-color: #BBBBBB;
}

div#instrument .item-error {
    margin-bottom: 0;
    margin-top: 16px;
}

/***********************
    Modules
 ***********************/

.module {
    position: relative;
}

#module-text {
    position: relative;
    height: 200px;
    margin-top: .5rem;
    overflow: auto;
}

.module .navbar-nav .navbar-text, .module .navbar-nav .nav-link {
    padding: 0;
}

.module .navbar-nav {
    flex-direction: row;
}

.navbar {
    position: relative;
    padding: 4px 8px;
}

#module-section-label {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis
}

.module .dropdown-toggle::after {
    display: none;
}

